@@ -1,3 +1,9 @@
+2006-11-09  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Add a macro to detect QScintilla2.
+	* qscintilla2.m4: New. Defines the macro WITH_QSCINTILLA2. The way I
+          find libqscintilla2 seem rather fragile.
+
 2006-11-07  Akim Demaille  <demaille@gostai.com>
 
 	More posix -> engine
